syntax = "proto3";

package grpcexample;

option go_package = "grpc/proto";

message ElectionResult {
  int32 pid = 1;
  bool coordinator = 2;
}

message EmptyMessage {

}

service MutualExclusionService {
  rpc Election (EmptyMessage) returns (ElectionResult);
  rpc SetCoordinator(ElectionResult) returns (EmptyMessage);
}